# haven

./: .env.example  .gitignore  Cargo.toml
.github/workflows/: release.yml
admin-ui/: app.js  index.html  style.css
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/public/: capture-processor.js
client/src/: App.svelte  main.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/commands/: crypto.rs  mod.rs  transfer.rs
client/src/assets/: global.css
client/src/lib/components/auth/: Login.svelte
client/src/lib/components/chat/: EmojiPicker.svelte  FileChannel.svelte  MessageInput.svelte  MessageList.svelte  ReactionBadge.svelte
client/src/lib/components/sidebar/: Sidebar.svelte
client/src/lib/components/voice/: VideoGrid.svelte  VoiceChannel.svelte
client/src/lib/ipc/: api.ts  crypto.ts  gateway.ts
client/src/lib/stores/: auth.ts  channels.ts  messages.ts  presence.ts  transfers.ts  updater.ts  voice.ts
client/src/lib/utils/: emoji.ts
client/src/lib/workers/: crypto-pool.ts  crypto-worker.ts
crates/haven-api/: Cargo.toml
crates/haven-api/src/: admin.rs  auth.rs  files.rs  lib.rs  messages.rs  middleware.rs  reactions.rs
crates/haven-crypto/: Cargo.toml
crates/haven-crypto/src/: encrypt.rs  keys.rs  lib.rs
crates/haven-db/: Cargo.toml
crates/haven-db/src/: lib.rs  migrations.rs  models.rs  pool.rs  queries.rs
crates/haven-fast-transfer/: Cargo.toml
crates/haven-fast-transfer/src/: bitfield.rs  lib.rs  logging.rs  protocol.rs  receiver.rs  sender.rs
crates/haven-file-gateway/: Cargo.toml
crates/haven-file-gateway/src/: main.rs
crates/haven-file-server/: Cargo.toml
crates/haven-file-server/src/: cleanup.rs  db.rs  fast_transfer.rs  main.rs  routes.rs  storage.rs
crates/haven-gateway/: Cargo.toml
crates/haven-gateway/src/: connection.rs  dispatcher.rs  lib.rs  tcp_relay.rs  turn.rs  udp_relay.rs
crates/haven-server/: Cargo.toml
crates/haven-server/src/: main.rs
crates/haven-types/: Cargo.toml
crates/haven-types/src/: api.rs  events.rs  lib.rs  models.rs
haven_app/: .gitignore  README.md  installer.iss  pubspec.yaml
haven_app/android/app/: build.gradle.kts
haven_app/android/app/src/main/: AndroidManifest.xml
haven_app/android/app/src/main/kotlin/com/haven/haven_app/: MainActivity.kt
haven_app/ios/Runner/: Info.plist
haven_app/ios/Runner.xcodeproj/: project.pbxproj
haven_app/lib/: app.dart  main.dart
haven_app/lib/config/: constants.dart  theme.dart
haven_app/lib/models/: channel.dart  message.dart  user.dart  voice_participant.dart
haven_app/lib/providers/: audio_settings_provider.dart  auth_provider.dart  channel_provider.dart  file_transfer_provider.dart  gateway_provider.dart  message_provider.dart  presence_provider.dart  typing_provider.dart  video_provider.dart  voice_provider.dart
haven_app/lib/screens/: chat_screen.dart  file_transfer_screen.dart  home_screen.dart  login_screen.dart
haven_app/lib/services/: api_service.dart  auth_service.dart  crypto_service.dart  file_client_bindings.dart  file_transfer_service.dart  gateway_service.dart  htp_bindings.dart  htp_service.dart  logger_service.dart  screen_audio_service.dart  transfer_db_service.dart  voice_service.dart  webrtc_service.dart  win_audio.dart
haven_app/lib/utils/: formatters.dart
haven_app/lib/widgets/: emoji_picker.dart  message_bubble.dart  message_input.dart  online_indicator.dart  screen_source_picker.dart  settings_dialog.dart  sidebar.dart  video_grid.dart  video_panel.dart  voice_controls.dart
haven_app/linux/: CMakeLists.txt
haven_app/macos/Flutter/: GeneratedPluginRegistrant.swift
haven_app/macos/Runner.xcodeproj/: project.pbxproj
haven_app/macos/Runner/Configs/: AppInfo.xcconfig
haven_app/native/haven_file_client/: Cargo.toml
haven_app/native/haven_file_client/src/: crypto.rs  download.rs  fast_download.rs  fast_upload.rs  lib.rs  loopback.rs  upload.rs
haven_app/native/haven_transfer/: Cargo.toml
haven_app/native/haven_transfer/src/: congestion.rs  crypto.rs  lib.rs  protocol.rs  receiver.rs  sender.rs  stats.rs
haven_app/native/haven_transfer/tests/: loopback_test.rs
haven_app/test/: crypto_test.dart  e2e_test.dart  gateway_test.dart  integration_test.dart  voice_crypto_test.dart  widget_test.dart  win_audio_test.dart
haven_app/windows/runner/: Runner.rc  main.cpp
