[workspace]
resolver = "2"
exclude = ["haven_app/native/haven_file_client"]
members = [
    "crates/haven-server",
    "crates/haven-api",
    "crates/haven-gateway",
    "crates/haven-crypto",
    "crates/haven-db",
    "crates/haven-types",
    "crates/haven-file-server",
]

[workspace.package]
version = "3.0.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.35", features = ["bundled"] }

# Auth
argon2 = { version = "0.5", features = ["rand"] }
jsonwebtoken = "9"

# Crypto
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Networking
socket2 = "0.5"
bytes = "1"

# Config
dotenvy = "0.15"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Streaming
tokio-util = { version = "0.7", features = ["io"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }

# Streaming helpers
async-stream = "0.3"
http-body-util = "0.1"
futures-util = "0.3"

# Workspace crates
haven-api = { path = "crates/haven-api" }
haven-crypto = { path = "crates/haven-crypto" }
haven-db = { path = "crates/haven-db" }
haven-gateway = { path = "crates/haven-gateway" }
haven-types = { path = "crates/haven-types" }
