[package]
name = "haven-desktop"
version = "0.1.0"
edition = "2024"

[lib]
name = "haven_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
haven-crypto = { path = "../../crates/haven-crypto", features = ["client"] }
base64 = { workspace = true }
