[package]
name = "haven-desktop"
version = "0.1.0"
edition = "2024"

[lib]
name = "haven_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
haven-crypto = { path = "../../crates/haven-crypto", features = ["client"] }
base64 = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
socket2 = { workspace = true }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
dashmap = "6"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
