[package]
name = "haven-file-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "haven-file-gateway"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
http-body-util = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }

haven-types = { workspace = true }
