[package]
name = "haven-file-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "haven-file-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
rusqlite = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
async-stream = { workspace = true }
http-body-util = { workspace = true }
futures-util = { workspace = true }

haven-types = { workspace = true }
haven-fast-transfer = { workspace = true }
crossbeam-channel = { workspace = true }
socket2 = { workspace = true }
