[package]
name = "haven-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
haven-types = { workspace = true }
haven-db = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
futures-util = "0.3"
