[package]
name = "haven_file_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
bytes = "1"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
crossbeam-channel = "0.5"
socket2 = "0.5"
haven-fast-transfer = { path = "../../../crates/haven-fast-transfer" }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"
